<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/layout_toolbar"
            layout="@layout/layout_tool_bar"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@id/layout_toolbar"
            android:textStyle="italic"
            android:textSize="16sp"
            android:text="@string/text_introduction"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_encode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:onClick="encodeImage"
            android:padding="15dp"
            android:text="@string/text_encode_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_decode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:onClick="decodeImage"
            android:padding="15dp"
            android:text="@string/text_decode_image"
            app:layout_constraintTop_toBottomOf="@id/btn_encode" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>