<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <variable
            name="encodeViewModel"
            type="com.pulkit.imagesteganography.encodeactivity.EncodeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        app:snackMessage="@{encodeViewModel.snackbarMessage}"
        android:layout_height="match_parent">

        <include
            android:id="@+id/layout_toolbar"
            layout="@layout/layout_tool_bar"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layout_toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_encode_image"
                    android:layout_width="250dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="20dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/image_placeholder"
                    app:imageBitmap="@{encodeViewModel.originalImage}"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_upload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:onClick="@{encodeViewModel::onUploadClicked}"
                    android:padding="15dp"
                    android:text="@string/text_upload"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_encode_image" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_secret_key"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:hint="@string/hint_secret_key"
                    app:layout_constraintTop_toBottomOf="@id/btn_upload">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_secret_key"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:text="@={encodeViewModel.secretKey}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_message"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/hint_message"
                    app:layout_constraintTop_toBottomOf="@id/til_secret_key">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={encodeViewModel.message}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_encode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:onClick="@{encodeViewModel::onEncodeClicked}"
                android:padding="15dp"
                android:text="@string/text_encode_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_message" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_share"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:visibility="@{encodeViewModel.shareVisibility}"
                    android:onClick="@{encodeViewModel::onShareClicked}"
                    android:padding="15dp"
                    android:text="@string/text_share"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_encode" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>